# PYTHON_WEB

./: .gitignore  README.md
hm_1/: README.md
hm_10/: README.md  pyproject.toml
hm_10/django_project/: db.sqlite3
hm_10/django_project/django_project/: settings.py  urls.py
hm_10/django_project/quotes_app/: forms.py  models.py  urls.py  views.py
hm_10/django_project/quotes_app/management/commands/: scraping-data.py  transfer-data.py
hm_10/django_project/quotes_app/migrations/: 0001_initial.py
hm_10/django_project/quotes_app/static/quotes_app/: bootstrap.min.css  style.css
hm_10/django_project/quotes_app/templates/quotes_app/: author.html  base.html  index.html  main.html  pagination.html  quotes.html  tag.html  top_tags.html
hm_10/django_project/scraped_data/: authors.json  quotes.json
hm_10/django_project/users_app/: forms.py  models.py  urls.py  views.py
hm_10/django_project/users_app/migrations/: 0001_initial.py
hm_10/django_project/users_app/templates/users_app/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  signup.html
hm_10/resources/: quotes.json
hm_10/resources/old/: pyproject.toml
hm_10/resources/old/notes/noteapp/: views.py
hm_10/resources/old/notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
hm_10/resources/old/notes/noteapp/templates/noteapp/: index.html
hm_10/resources/old/notes/notes/: settings.py
hm_10/resources/old/notes/users/: views.py
hm_10/resources/old/notes/users/migrations/: 0001_initial.py
hm_11/: README.md  alembic.ini  connect.py  main.py  models.py  pyproject.toml  seeds.py
hm_11/alembic/: env.py
hm_11/alembic/versions/: a7da3f8858e6_init.py
hm_12/: README.md  main.py  pyproject.toml
hm_12/alembic/: env.py
hm_12/alembic/versions/: 2fdda9c55737_init.py
hm_12/db/: connect.ini  connect.py
hm_12/src/: auth.py  models.py  seeds.py  users.py
hm_13/: README.md  docker-compose.yml  main.py  pyproject.toml
hm_13/src/: schemas.py
hm_14/: Dockerfile  README.md  main.py  pyproject.toml  schemas.py
hm_14/alembic/: env.py
hm_14/alembic/versions/: 8d700ef31d25_init.py
hm_14/docs/: conf.py  index.rst
hm_14/docs/_build/doctrees/: environment.pickle  index.doctree
hm_14/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
hm_14/src/config/: config.py
hm_14/src/db/: models.py
hm_14/src/middlewares/: middlewares.py
hm_14/src/repository/: contacts.py  users.py
hm_14/src/routes/: auth.py  contacts.py  users.py
hm_14/src/services/: auth.py  email.py
hm_14/src/services/templates/register/: confirm.html
hm_14/tests/: conftest.py  contacts_repo_test.py  users_repo_test.py
hm_2/: Dockerfile
hm_3/: clean_folder.py  factorize.py
hm_4/: main.py
hm_4/html/: error.html  (+2 more)
hm_5/: main.py
hm_6/: connection.py  create_tables.py  hm_6.db  seeds.py  tables_query.py
hm_7/: README.MD  config.ini  main.py  pyproject.toml
hm_7/alembic/versions/: 9224e7dca63b_init.py
hm_7/src/: db.py  models.py  my_select.py  seeds.py
hm_8/: README.md
hm_9/: README.md  authors.json  main.py
(+101 files in other folders)
