[tool.poetry]
name = "hm_10"
version = "0.1.0"
description = ""
authors = ["Yaroslav Melnychuk <yarmel.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.4"
Scrapy = "^2.10.1"
pymongo = "^4.5.0"
mongoengine = "^0.27.0"
colorama = "^0.4.6"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
