[tool.poetry]
name = "hm_11"
version = "0.1.0"
description = ""
authors = ["Yaroslav Melnychuk <yarmel.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.21"
fastapi = "^0.103.2"
psycopg2-binary = "^2.9.8"
requests = "^2.31.0"
alembic = "^1.12.0"
unicorn = "^2.0.1"
Faker = "^19.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
