[tool.poetry]
name = "hm_13"
version = "0.1.0"
description = ""
authors = ["Yaroslav Melnychuk <yarmel.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = {version = "^2.3.0", extras = ["email"]}
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
pydantic-extra-types = "^2.1.0"
phonenumbers = "^8.13.20"
libgravatar = "^1.0.4"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
passlib = "^1.7.4"
fastapi-mail = "^1.4.1"
redis = "4.6.0"
fastapi-limiter = "^0.1.5"
python-dotenv = "^1.0.0"
cloudinary = "^1.34.0"
pydantic-settings = "^2.0.3"
jose = "^1.0.0"
pytest = "^7.4.2"

[tool.poetry.dev-dependencies]
Sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]